--- a/Online_Shop/Views/BeanBags/Browse.cshtml
+++ b/Online_Shop/Views/BeanBags/Browse.cshtml
@@ -26,7 +26,7 @@
                 @item.price
             </td>
             <td class="button">
-                @Html.ActionLink("Add to cart", "AddtoCart", "ShoppingCart", new {id = Model.id},"")
+                @Html.ActionLink("Add to cart", "AddtoCart", "ShoppingCart", new {id = item.id},"")
             </td>
         </tr>
     }
