--- a/Online_Shop/Views/Shared/_Layout.cshtml
+++ b/Online_Shop/Views/Shared/_Layout.cshtml
@@ -1,36 +1,34 @@
 ﻿<!DOCTYPE html>
 <html>
-<head>
-    <title>@ViewBag.Title</title>
-    <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
-    <script src="@Url.Content("~/Scripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
-</head>
-<body>
-    <div id="header">
-        <div class="content-wrapper">
-            <div class="float-right">
-                <section id="login">
-                    @Html.Partial("_LoginPartial")
-                </section>
-                <ul id="menu">
-                    <li class="first"><a href="@Url.Content("~")" id="current">Home</a></li>
-                    <li><a href="@Url.Content("~/BeanBags/")">Store</a></li>
-                    <li>@{Html.RenderAction("CartSummary", "ShoppingCart");}</li>
-                    <li><a href="@Url.Content("~/StoreManager/")">Admin</a></li>
-                </ul>    
-            </div>
-        </div>    
-    </div>
-
-    @{Html.RenderAction("BeanBagTypesMenu", "BeanBags");}
-
-    <div id="main">
-        @RenderSection("featured", required: false)
-        <section class="content-wrapper main-content clear-fix">
-            @RenderBody()
-        </section>
-    </div>
-
+    <head>
+        <title>@ViewBag.Title</title>
+        <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
+        <script src="@Url.Content("~/Scripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
+    </head>
+    <body>
+        <div id="header">
+            <div class="content-wrapper">
+                <div class="float-right">
+                        <section id="login">
+                            @Html.Partial("_LoginPartial")
+                        </section>
+                        <ul id="menu">
+                            <li class="first"><a href="@Url.Content("~")" id="current">Home</a></li>
+                            <li><a href="@Url.Content("~/BeanBags/")">Store</a></li>
+                            <li>@{Html.RenderAction("CartSummary", "ShoppingCart");}</li>
+                            <li><a href="@Url.Content("~/StoreManager/")">Admin</a></li>
+                        </ul>    
+                </div>
+             </div>    
+        </div>
+       
+        <div id="menu">
+            @{Html.RenderAction("BeanBagTypesMenu", "BeanBags");}
+            @RenderSection("featured", required: false)
+            <section class="content-wrapper main-content clear-fix">
+                @RenderBody()
+            </section>
+        </div>
         <div id="footer">
             <div class="content-wrapper">
                 <div class="float-left">
@@ -40,5 +38,5 @@
         </div>
         @Scripts.Render("~/bundles/jquery")
         @RenderSection("scripts", required: false)
-</body>
+    </body>
 </html>
