--- a/Online_Shop/Views/Home/About.cshtml
+++ b/Online_Shop/Views/Home/About.cshtml
@@ -3,32 +3,16 @@
 }
 
 <hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
+    <h1>@ViewBag.Title</h1>
     <h2>@ViewBag.Message</h2>
 </hgroup>
 
 <article>
     <p>
-        Use this area to provide additional information.
-    </p>
-
-    <p>
-        Use this area to provide additional information.
-    </p>
-
-    <p>
-        Use this area to provide additional information.
+    <h4>Contact Information</h4>
+        Roth IT Solutions<br />
+        Ringwiesenstrasse 4<br />
+        8600 Dübendorf<br />
+        rothITsolutions@gmail.com
     </p>
 </article>
-
-<aside>
-    <h3>Aside Title</h3>
-    <p>
-        Use this area to provide additional information.
-    </p>
-    <ul>
-        <li>@Html.ActionLink("Home", "Index", "Home")</li>
-        <li>@Html.ActionLink("About", "About", "Home")</li>
-        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-    </ul>
-</aside>
