--- a/Online_Shop/Views/ShoppingCart/Index.cshtml
+++ b/Online_Shop/Views/ShoppingCart/Index.cshtml
@@ -58,13 +58,13 @@
 </p>
 <div id="update-message">
 </div>
-<table border="1">
+<table>
     <tr>
         <th>
-            BeanBag Name
+            Name
         </th>
         <th>
-            Price (each)
+            Price
         </th>
         <th>
             Quantity
@@ -90,14 +90,14 @@
     }
     <tr>
         <td>
-            Total
+            <b>Total</b>
         </td>
         <td>
         </td>
         <td>
         </td>
         <td id="cart-total">
-            @Model.CartTotal
+            <b>@Model.CartTotal</b>
         </td>
     </tr>
 </table>
