--- a/Online_Shop/Content/Site.css
+++ b/Online_Shop/Content/Site.css
@@ -1,11 +1,11 @@
 ﻿html {
-    background-color: #e2e2e2;
+    background-color: #128594;/*background footer*/
     margin: 0;
     padding: 0;
 }
 
 body {
-    background-color: #fff;
+    background-color: #AFE8F0;/*background main content*/
     border-top: solid 10px #000;
     color: #333;
     font-size: .85em;
@@ -105,13 +105,13 @@ h5, h6 {
 }
 
     .main-content {
-        background: url("../Images/accent.png") no-repeat;
+        /*background: url("../Images/accent.png") no-repeat;*/
         padding-left: 10px;
         padding-top: 30px;
     }
 
     .featured + .main-content {
-        background: url("../Images/heroAccent.png") no-repeat;
+        /*background: url("../Images/heroAccent.png") no-repeat;*/
     }
 
 header .content-wrapper {
@@ -209,11 +209,11 @@ ul#menu {
 ----------------------------------------------------------*/
 /* featured */
 .featured {
-    background-color: #fff;
+    background-color: #128594;/*background next to the home title*/
 }
 
     .featured .content-wrapper {
-        background-color: #7ac0da;
+        background-color: #128594;/*background color home title*/
         background-image: -ms-linear-gradient(left, #7ac0da 0%, #a4d4e6 100%);
         background-image: -o-linear-gradient(left, #7ac0da 0%, #a4d4e6 100%);
         background-image: -webkit-gradient(linear, left top, right top, color-stop(0, #7ac0da), color-stop(1, #a4d4e6));
@@ -224,7 +224,7 @@ ul#menu {
     }
 
         .featured hgroup.title h1, .featured hgroup.title h2 {
-            color: #fff;
+            color: #FFFFFF;/*text color home title*/
         }
 
         .featured p {
