--- a/Online_Shop/Views/Shared/_Layout.cshtml
+++ b/Online_Shop/Views/Shared/_Layout.cshtml
@@ -14,9 +14,8 @@
                         </section>
                         <ul id="menu">
                             <li class="first"><a href="@Url.Content("~")" id="current">Home</a></li>
-                            <li><a href="@Url.Content("~/BeanBags/")">Store</a></li>
                             <li>@{Html.RenderAction("CartSummary", "ShoppingCart");}</li>
-                            <li><a href="@Url.Content("~/StoreManager/")">Admin</a></li>
+                            <li><a href="@Url.Content("~/Home/About")">About</a></li>
                         </ul>    
                 </div>
              </div>    
