--- a/Online_Shop/Views/Shared/_Layout.cshtml
+++ b/Online_Shop/Views/Shared/_Layout.cshtml
@@ -1,7 +1,10 @@
-﻿<!DOCTYPE html>
+﻿@using Online_Shop.Resources
+@using MvcGlobalisationSupport
+
+    <!DOCTYPE html>
 <html>
     <head>
-        <title>@ViewBag.Title</title>
+        <title>@ViewBag.Title - @Html.Raw(Global.Title)</title>
         <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
         <script src="@Url.Content("~/Scripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
     </head>
@@ -9,14 +12,23 @@
         <div id="header">
             <div class="content-wrapper">
                 <div class="float-right">
-                        <section id="login">
-                            @Html.Partial("_LoginPartial")
-                        </section>
-                        <ul id="menu">
-                            <li class="first"><a href="@Url.Content("~")" id="current">Home</a></li>
-                            <li>@{Html.RenderAction("CartSummary", "ShoppingCart");}</li>
-                            <li><a href="@Url.Content("~/Home/About")">About</a></li>
-                        </ul>    
+                    <section id="login">
+                        @Html.Partial("_LoginPartial")
+                    </section>
+                    <ul id="menu">
+                        <li class="first"><a href="@Url.Content("~")" id="current">Home</a></li>
+                        <li>@{Html.RenderAction("CartSummary", "ShoppingCart");}</li>
+                        <li><a href="@Url.Content("~/Home/About")">About</a></li>
+                        
+                    </ul>    
+                    <nav>
+                        <ul id="languages">
+                            <li>@Html.GlobalisedRouteLink(Global.LangEnglish, "en", ViewContext.RouteData)</li>
+                            <li>@Html.GlobalisedRouteLink(Global.LangGerman, "de", ViewContext.RouteData)</li>
+                            <li>@Html.GlobalisedRouteLink(Global.LangFrench, "fr", ViewContext.RouteData)</li>
+                            <li>@Html.GlobalisedRouteLink(Global.LangItalian, "it", ViewContext.RouteData)</li>
+                        </ul>
+                    </nav>
                 </div>
              </div>    
         </div>
